--- a/addon/locale/ja/LC_MESSAGES/nvda.po
+++ b/addon/locale/ja/LC_MESSAGES/nvda.po
@@ -1,113 +1,356 @@
-# Translation file for MyCalculator NVDA Add-on.
-# Copyright (C) 2025 MyCalculator Project
-# This file is distributed under the same license as the MyCalculator package.
+# Translation file for My Calculator NVDA Add-on.
+# Copyright (C) 2025 My Calculator Project
+# This file is distributed under the same license as the MyCalculatorpackage.
 # Andhi Mardianto <anditoinfo@gmail.com>, 2025.
-#
+
 msgid ""
 msgstr ""
-"Project-Id-Version: MyCalculator 1.0\n"
+"Project-Id-Version: my calculator 2.0\n"
 "Report-Msgid-Bugs-To: anditoinfo@gmail.com\n"
 "POT-Creation-Date: 2025-01-02 10:01+0700\n"
-"PO-Revision-Date: 2025-01-02 10:30+0700\n"
-"Last-Translator: Andhi Mardianto <anditoinfo@gmail.com>\n"
-"Language-Team: Japanese <ja@li.org>\n"
+"PO-Revision-Date: 2025-01-11 10:30+0700\n"
+"Last-Translator: Andhi Mardianto with google translet<anditoinfo@gmail.com>\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: globalPlugins/myCalculator/help.py:6
-msgid "Calculation Mode Help"
-msgstr "計算モードのヘルプ"
 
-#: globalPlugins/myCalculator/help.py:16
-msgid ""
-"Standard Mode:\n"
-"Calculations follow the standard mathematical operator precedence rules "
-"(PEMDAS).\n"
-"Example: 3 + 5 * 2 = 13 (multiplication is performed first).\n"
-"\n"
-"Left to Right Mode:\n"
-"Calculations are performed from left to right without considering operator "
-"precedence.\n"
-"Example: 3 + 5 * 2 = 16 (calculations are done left to right)."
-msgstr ""
-"標準モード:\n"
-"計算は標準的な数学演算子の優先順位ルール (PEMDAS) に従います。\n"
-"例: 3 + 5 * 2 = 13 (最初に掛け算が行われます)。\n"
-"\n"
-"左から右モード:\n"
-"演算子の優先順位を考慮せず、左から右に計算が行われます。\n"
-"例: 3 + 5 * 2 = 16 (計算は左から右に行われます)。"
+# init.py
 
-#: globalPlugins/myCalculator/help.py:28
-msgid "OK"
-msgstr "OK"
-
-#: globalPlugins/myCalculator/__init__.py:26
 msgid "Open My Calculator dialog"
-msgstr "My Calculatorダイアログを開く"
+msgstr "電卓ダイアログを開く"
 
-#: globalPlugins/myCalculator/__init__.py:27
-msgid "MyCalculator"
-msgstr "マイ・カリキュレーター"
-
-#: globalPlugins/myCalculator/__init__.py:60
 msgid "Calculation Input"
 msgstr "計算入力"
 
-#: globalPlugins/myCalculator/__init__.py:69
-msgid "Result"
-msgstr "結果"
-
-#: globalPlugins/myCalculator/__init__.py:76
 msgid "Copy"
 msgstr "コピー"
 
-#: globalPlugins/myCalculator/__init__.py:81
 msgid "Standar"
 msgstr "標準"
 
-#: globalPlugins/myCalculator/__init__.py:86
 msgid "Left to Right"
-msgstr "左から右"
+msgstr "左から右へ"
 
-#: globalPlugins/myCalculator/__init__.py:91
+msgid "Conversion"
+msgstr "変換"
+
+msgid "Scientific"
+msgstr "科学的"
+
 msgid "Help"
 msgstr "ヘルプ"
 
-#: globalPlugins/myCalculator/__init__.py:97
-msgid "History"
-msgstr "履歴"
-
-#: globalPlugins/myCalculator/__init__.py:198
-msgid "Invalid input, only numbers and arithmetic symbols allowed"
-msgstr "無効な入力です。数字と算術記号のみが許可されます"
-
-#: globalPlugins/myCalculator/__init__.py:160
 msgid "Calculation mode set to Standard International"
-msgstr "計算モードが標準国際モードに設定されました"
+msgstr "計算モードが標準インターナショナルに設定されました"
 
-#: globalPlugins/myCalculator/__init__.py:165
 msgid "Calculation mode set to Left to Right"
 msgstr "計算モードが左から右に設定されました"
 
-#: globalPlugins/myCalculator/__init__.py:179
-msgid "Result copied to clipboard"
-msgstr "結果がクリップボードにコピーされました"
-
-#: globalPlugins/myCalculator/__init__.py:181
 msgid "Failed to access clipboard"
 msgstr "クリップボードにアクセスできませんでした"
 
-#: globalPlugins/myCalculator/__init__.py:183
-msgid "No result to copy"
-msgstr "コピーする結果がありません"
+msgid "Invalid input, only numbers and arithmetic symbols allowed"
+msgstr "無効な入力です。数字と算術記号のみ使用できます"
 
-#: globalPlugins/myCalculator/__init__.py:213
+msgid "Error! Check Input"
+msgstr "エラー！入力を確認してください"
+
 msgid "Invalid calculation mode"
 msgstr "無効な計算モード"
 
-#: globalPlugins/myCalculator/__init__.py:226
-msgid "Error! Check Input"
-msgstr "エラー！入力を確認してください"
+# conversion.py
+msgid "Please Select Conversion Mode"
+msgstr "変換モードを選択してください"
+
+#msgid "Copy"
+#msgstr "コピー"
+
+msgid "Length"
+msgstr "長さ"
+
+msgid "Mass"
+msgstr "質量"
+
+msgid "Temperature"
+msgstr "温度"
+
+msgid "Volume"
+msgstr "体積"
+
+msgid "Speed"
+msgstr "速度"
+
+msgid "Select a Speed conversion:"
+msgstr "速度変換を選択してください:"
+
+msgid "Speed Conversion Options"
+msgstr "速度変換オプション"
+
+msgid "Input in Kilometers per Hour:"
+msgstr "時速キロメートルで入力:"
+
+msgid "Input in Miles per Hour:"
+msgstr "時速マイルで入力:"
+
+msgid "Input in Meters per Second:"
+msgstr "毎秒メートルで入力:"
+
+msgid "Input in Knots:"
+msgstr "ノットで入力:"
+
+msgid "Input in Feet per Second:"
+msgstr "毎秒フィートで入力:"
+
+msgid "Select a length conversion:"
+msgstr "長さ変換を選択してください:"
+
+msgid "Length Conversion Options"
+msgstr "長さ変換オプション"
+
+msgid "Input in Kilometers:"
+msgstr "キロメートルで入力:"
+
+msgid "Input in Miles:"
+msgstr "マイルで入力:"
+
+msgid "Input in Meters:"
+msgstr "メートルで入力:"
+
+msgid "Input in Feet:"
+msgstr "フィートで入力:"
+
+msgid "Input in Centimeters:"
+msgstr "センチメートルで入力:"
+
+msgid "Input in Inches:"
+msgstr "インチで入力:"
+
+msgid "Select a Mass conversion:"
+msgstr "質量変換を選択してください:"
+
+msgid "Mass Conversion Options"
+msgstr "質量変換オプション"
+
+msgid "Input in Kilograms:"
+msgstr "キログラムで入力:"
+
+msgid "Input in Pounds:"
+msgstr "ポンドで入力:"
+
+msgid "Input in Tons:"
+msgstr "トンで入力:"
+
+msgid "Input in Ounces:"
+msgstr "オンスで入力:"
+
+msgid "Input in Grams:"
+msgstr "グラムで入力:"
+
+msgid "Select a Temperature conversion:"
+msgstr "温度変換を選択してください:"
+
+msgid "Temperature Conversion Options"
+msgstr "温度変換オプション"
+
+msgid "Input in Celsius:"
+msgstr "摂氏で入力:"
+
+msgid "Input in Fahrenheit:"
+msgstr "華氏で入力:"
+
+msgid "Input in Kelvin:"
+msgstr "ケルビンで入力:"
+
+msgid "Select a Volume conversion:"
+msgstr "体積変換を選択してください:"
+
+msgid "Volume Conversion Options"
+msgstr "体積変換オプション"
+
+msgid "Input in Liter:"
+msgstr "リットルで入力:"
+
+msgid "Input in Gallon (US):"
+msgstr "ガロン (米国) で入力:"
+
+msgid "Input in Milliliter:"
+msgstr "ミリリットルで入力:"
+
+msgid "Input in Cubic Meter:"
+msgstr "立方メートルで入力:"
+
+msgid "Input in Gallon (UK) :"
+msgstr "ガロン (英国) で入力:"
+
+msgid "Input in Liter :"
+msgstr "リットルで入力:"
+
+msgid "Input in Cubic Inch :"
+msgstr "立方インチで入力:"
+
+msgid "Input in Milliliter :"
+msgstr "ミリリットルで入力:"
+
+msgid "Input in Cubic Centimeter :"
+msgstr "立方センチメートルで入力:"
+
+msgid "Input in Barrel (US) :"
+msgstr "バレル (米国) で入力:"
+
+#msgid "Failed to access clipboard"
+#msgstr "クリップボードにアクセスできませんでした"
+
+msgid "Invalid input, only numbers allowed"
+msgstr "無効な入力です。数字のみ使用可能です"
+
+# scientific.py
+msgid "Please Select Scientific Mode "
+msgstr "科学モードを選択してください"
+
+msgid "Result"
+msgstr "結果"
+
+#msgid "Copy"
+#msgstr "コピー"
+
+msgid "Sin"
+msgstr "サイン"
+
+msgid "Cos"
+msgstr "コサイン"
+
+msgid "Log"
+msgstr "対数"
+
+msgid "Sqrt"
+msgstr "平方根"
+
+msgid "History"
+msgstr "履歴"
+
+msgid "Select a Basis"
+msgstr "基数を選択してください"
+
+msgid "Basis Options"
+msgstr "基数オプション"
+
+msgid "Input in Degrees:"
+msgstr "度で入力:"
+
+msgid "Calculation mode set to Sin"
+msgstr "計算モードはサインに設定されました"
+
+msgid "Calculation mode set to Cos"
+msgstr "計算モードはコサインに設定されました"
+
+msgid "Input in Basis Natural :"
+msgstr "自然基数で入力:"
+
+msgid "Input in Basis 10:"
+msgstr "基数10で入力:"
+
+msgid "Input in Non-Negative Numbers:"
+msgstr "非負の数で入力:"
+
+msgid "Calculation mode set to Sqrt"
+msgstr "計算モードは平方根に設定されました"
+
+msgid "Result copied to clipboard"
+msgstr "結果がクリップボードにコピーされました"
+
+#msgid "Failed to access clipboard"
+#msgstr "クリップボードにアクセスできませんでした"
+
+msgid "No result to copy"
+msgstr "コピーする結果がありません"
+
+msgid "Please select a calculation mode first"
+msgstr "計算モードを最初に選択してください"
+
+msgid "Logarithm is only defined for positive numbers"
+msgstr "対数は正の数に対してのみ定義されています"
+
+msgid "Square root is only defined for non-negative numbers"
+msgstr "平方根は非負の数に対してのみ定義されています"
+
+msgid ""
+"High Precision = {result}\n"
+"Rounded = {rounded_result}"
+msgstr ""
+"高精度 = {result}\n"
+"丸めた結果 = {rounded_result}"
+
+msgid "Invalid input. Please check your expression"
+msgstr "無効な入力です。式を確認してください"
+
+msgid "An error occurred: "
+msgstr "エラーが発生しました: "
+
+#msgid "Invalid input, only numbers allowed"
+#msgstr "無効な入力です。数字のみ使用可能です"
+
+# help.py
+msgid "Calculation Mode Help"
+msgstr "計算モードのヘルプ"
+
+msgid ""
+"Standard Mode:\n"
+"Calculations follow the standard mathematical operator precedence rules (PEMDAS).\n"
+"Example: 3 + 5 * 2 = 13 (multiplication is performed first).\n"
+"\n"
+"Left to Right Mode:\n"
+"Calculations are performed from left to right without considering operator precedence.\n"
+"Example: 3 + 5 * 2 = 16 (calculations are done left to right).\n"
+"\n"
+"Scientific Mode:\n"
+"\n"
+"Sin and Cos:\n"
+"Calculates the values of sine and cosine.\n"
+"The input must be in degrees. The calculator will automatically convert the value to radians for the calculation.\n"
+"\n"
+"Logarithms:\n"
+"Two types of logarithms are available:\n"
+"- Natural Logarithm (LN): Logarithm with the natural base (e).\n"
+"- Base 10 Logarithm: Logarithm with base 10.\n"
+"Negative numbers are not supported as logarithms are only defined for positive numbers.\n"
+"\n"
+"Square Root:\n"
+"Calculates the square root of a number.\n"
+"Negative numbers are not supported as the square root is only defined for non-negative numbers.\n"
+"\n"
+"Result Format:\n"
+"- High Precision: Displays the result with full detail.\n"
+"- Rounded (2 Decimal Places): Displays the result in a simpler form, rounded to 2 decimal places for easier reading."
+msgstr ""
+"標準モード:\n"
+"計算は標準的な数学的演算子の優先順位ルール（PEMDAS）に従います。\n"
+"例：3 + 5 * 2 = 13（乗算が最初に行われます）。\n"
+"\n"
+"左から右モード:\n"
+"計算は演算子の優先順位を無視して、左から右に行われます。\n"
+"例：3 + 5 * 2 = 16（計算は左から右に行われます）。\n"
+"\n"
+"科学モード:\n"
+"\n"
+"サインとコサイン:\n"
+"サインとコサインの値を計算します。\n"
+"入力は度数法である必要があります。計算のために自動的にラジアンに変換されます。\n"
+"\n"
+"対数:\n"
+"二種類の対数があります。\n"
+"- 自然対数（LN）：自然基数（e）による対数。\n"
+"- 10進対数：基数10による対数。\n"
+"負の数はサポートされていません。対数は正の数に対してのみ定義されています。\n"
+"\n"
+"平方根:\n"
+"数の平方根を計算します。\n"
+"負の数はサポートされていません。平方根は非負の数に対してのみ定義されています。\n"
+"\n"
+"結果の形式:\n"
+"- 高精度: 結果を完全な詳細で表示します。\n"
+"- 丸めた（小数点以下2桁）: 結果を簡略化し、小数点以下2桁で表示します。"
+
+msgid "OK"
+msgstr "OK"
