--- a/addon/locale/zh/LC_MESSAGES/nvda.po
+++ b/addon/locale/zh/LC_MESSAGES/nvda.po
@@ -1,113 +1,332 @@
-# Translation file for MyCalculator NVDA Add-on.
-# Copyright (C) 2025 MyCalculator Project
-# This file is distributed under the same license as the MyCalculator package.
+# Translation file for My Calculator NVDA Add-on.
+# Copyright (C) 2025 My Calculator Project
+# This file is distributed under the same license as the MyCalculatorpackage.
 # Andhi Mardianto <anditoinfo@gmail.com>, 2025.
-#
+
 msgid ""
 msgstr ""
-"Project-Id-Version: MyCalculator 1.0\n"
+"Project-Id-Version: my calculator 2.0\n"
 "Report-Msgid-Bugs-To: anditoinfo@gmail.com\n"
 "POT-Creation-Date: 2025-01-02 10:01+0700\n"
-"PO-Revision-Date: 2025-01-02 10:30+0700\n"
-"Last-Translator: Andhi Mardianto <anditoinfo@gmail.com>\n"
-"Language-Team: Chinese <zh@li.org>\n"
+"PO-Revision-Date: 2025-01-11 10:30+0700\n"
+"Last-Translator: Andhi Mardianto with google translet<anditoinfo@gmail.com>\n"
 "Language: zh\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: globalPlugins/myCalculator/help.py:6
-msgid "Calculation Mode Help"
-msgstr "计算模式帮助"
 
-#: globalPlugins/myCalculator/help.py:16
-msgid ""
-"Standard Mode:\n"
-"Calculations follow the standard mathematical operator precedence rules "
-"(PEMDAS).\n"
-"Example: 3 + 5 * 2 = 13 (multiplication is performed first).\n"
-"\n"
-"Left to Right Mode:\n"
-"Calculations are performed from left to right without considering operator "
-"precedence.\n"
-"Example: 3 + 5 * 2 = 16 (calculations are done left to right)."
-msgstr ""
-"标准模式:\n"
-"计算遵循标准数学运算符优先级规则 (PEMDAS)。\n"
-"示例: 3 + 5 * 2 = 13 (先进行乘法计算)。\n"
-"\n"
-"从左到右模式:\n"
-"计算从左到右进行，不考虑运算符优先级。\n"
-"示例: 3 + 5 * 2 = 16 (计算按从左到右的顺序完成)。"
 
-#: globalPlugins/myCalculator/help.py:28
-msgid "OK"
-msgstr "确定"
+# init.py
+#msgid ""
+#msgstr ""
 
-#: globalPlugins/myCalculator/__init__.py:26
 msgid "Open My Calculator dialog"
 msgstr "打开我的计算器对话框"
 
-#: globalPlugins/myCalculator/__init__.py:27
-msgid "MyCalculator"
-msgstr "我的计算器"
-
-#: globalPlugins/myCalculator/__init__.py:60
 msgid "Calculation Input"
 msgstr "计算输入"
 
-#: globalPlugins/myCalculator/__init__.py:69
-msgid "Result"
-msgstr "结果"
-
-#: globalPlugins/myCalculator/__init__.py:76
 msgid "Copy"
 msgstr "复制"
 
-#: globalPlugins/myCalculator/__init__.py:81
 msgid "Standar"
 msgstr "标准"
 
-#: globalPlugins/myCalculator/__init__.py:86
 msgid "Left to Right"
 msgstr "从左到右"
 
-#: globalPlugins/myCalculator/__init__.py:91
+msgid "Conversion"
+msgstr "转换"
+
+msgid "Scientific"
+msgstr "科学"
+
 msgid "Help"
 msgstr "帮助"
 
-#: globalPlugins/myCalculator/__init__.py:97
-msgid "History"
-msgstr "历史记录"
-
-#: globalPlugins/myCalculator/__init__.py:198
-msgid "Invalid input, only numbers and arithmetic symbols allowed"
-msgstr "无效输入，仅允许数字和算术符号"
-
-#: globalPlugins/myCalculator/__init__.py:160
 msgid "Calculation mode set to Standard International"
-msgstr "计算模式设置为标准国际模式"
+msgstr "计算模式设置为标准国际"
 
-#: globalPlugins/myCalculator/__init__.py:165
 msgid "Calculation mode set to Left to Right"
 msgstr "计算模式设置为从左到右"
 
-#: globalPlugins/myCalculator/__init__.py:179
-msgid "Result copied to clipboard"
-msgstr "结果已复制到剪贴板"
-
-#: globalPlugins/myCalculator/__init__.py:181
 msgid "Failed to access clipboard"
 msgstr "无法访问剪贴板"
 
-#: globalPlugins/myCalculator/__init__.py:183
-msgid "No result to copy"
-msgstr "没有结果可复制"
+msgid "Invalid input, only numbers and arithmetic symbols allowed"
+msgstr "无效输入，只允许数字和算术符号"
 
-#: globalPlugins/myCalculator/__init__.py:213
+msgid "Error! Check Input"
+msgstr "错误！检查输入"
+
 msgid "Invalid calculation mode"
 msgstr "无效的计算模式"
 
-#: globalPlugins/myCalculator/__init__.py:226
-msgid "Error! Check Input"
-msgstr "错误！请检查输入"
+# conversion.py
+msgid "Please Select Conversion Mode"
+msgstr "请选择转换模式"
+
+#msgid "Copy"
+#msgstr "复制"
+
+msgid "Length"
+msgstr "长度"
+
+msgid "Mass"
+msgstr "质量"
+
+msgid "Temperature"
+msgstr "温度"
+
+msgid "Volume"
+msgstr "体积"
+
+msgid "Speed"
+msgstr "速度"
+
+msgid "Select a Speed conversion:"
+msgstr "选择一个速度转换："
+
+msgid "Speed Conversion Options"
+msgstr "速度转换选项"
+
+msgid "Input in Kilometers per Hour:"
+msgstr "输入公里每小时："
+
+msgid "Input in Miles per Hour:"
+msgstr "输入英里每小时："
+
+msgid "Input in Meters per Second:"
+msgstr "输入米每秒："
+
+msgid "Input in Knots:"
+msgstr "输入节："
+
+msgid "Input in Feet per Second:"
+msgstr "输入英尺每秒："
+
+msgid "Select a length conversion:"
+msgstr "选择一个长度转换："
+
+msgid "Length Conversion Options"
+msgstr "长度转换选项"
+
+msgid "Input in Kilometers:"
+msgstr "输入公里："
+
+msgid "Input in Miles:"
+msgstr "输入英里："
+
+msgid "Input in Meters:"
+msgstr "输入米："
+
+msgid "Input in Feet:"
+msgstr "输入英尺："
+
+msgid "Input in Centimeters:"
+msgstr "输入厘米："
+
+msgid "Input in Inches:"
+msgstr "输入英寸："
+
+msgid "Select a Mass conversion:"
+msgstr "选择一个质量转换："
+
+msgid "Mass Conversion Options"
+msgstr "质量转换选项"
+
+msgid "Input in Kilograms:"
+msgstr "输入千克："
+
+msgid "Input in Pounds:"
+msgstr "输入磅："
+
+msgid "Input in Tons:"
+msgstr "输入吨："
+
+msgid "Input in Ounces:"
+msgstr "输入盎司："
+
+msgid "Input in Grams:"
+msgstr "输入克："
+
+msgid "Select a Temperature conversion:"
+msgstr "选择一个温度转换："
+
+msgid "Temperature Conversion Options"
+msgstr "温度转换选项"
+
+msgid "Input in Celsius:"
+msgstr "输入摄氏度："
+
+msgid "Input in Fahrenheit:"
+msgstr "输入华氏度："
+
+msgid "Input in Kelvin:"
+msgstr "输入开尔文："
+
+msgid "Select a Volume conversion:"
+msgstr "选择一个体积转换："
+
+msgid "Volume Conversion Options"
+msgstr "体积转换选项"
+
+msgid "Input in Liter:"
+msgstr "输入升："
+
+msgid "Input in Gallon (US):"
+msgstr "输入加仑（美国）："
+
+msgid "Input in Milliliter:"
+msgstr "输入毫升："
+
+msgid "Input in Cubic Meter:"
+msgstr "输入立方米："
+
+msgid "Input in Gallon (UK) :"
+msgstr "输入加仑（英国）："
+
+msgid "Input in Liter :"
+msgstr "输入升："
+
+msgid "Input in Cubic Inch :"
+msgstr "输入立方英寸："
+
+msgid "Input in Milliliter :"
+msgstr "输入毫升："
+
+msgid "Input in Cubic Centimeter :"
+msgstr "输入立方厘米："
+
+msgid "Input in Barrel (US) :"
+msgstr "输入桶（美国）："
+
+#msgid "Failed to access clipboard"
+#msgstr "无法访问剪贴板"
+
+msgid "Invalid input, only numbers allowed"
+msgstr "无效输入，仅允许数字"
+
+# scientific.py
+msgid "Please Select Scientific Mode "
+msgstr "请选择科学模式"
+
+msgid "Result"
+msgstr "结果"
+
+#msgid "Copy"
+#msgstr "复制"
+
+msgid "Sin"
+msgstr "正弦"
+
+msgid "Cos"
+msgstr "余弦"
+
+msgid "Log"
+msgstr "对数"
+
+msgid "Sqrt"
+msgstr "平方根"
+
+msgid "History"
+msgstr "历史"
+
+msgid "Select a Basis"
+msgstr "选择一个基数"
+
+msgid "Basis Options"
+msgstr "基数选项"
+
+msgid "Input in Degrees:"
+msgstr "输入度数："
+
+msgid "Calculation mode set to Sin"
+msgstr "计算模式设置为正弦"
+
+msgid "Calculation mode set to Cos"
+msgstr "计算模式设置为余弦"
+
+msgid "Input in Basis Natural :"
+msgstr "输入自然基数："
+
+msgid "Input in Basis 10:"
+msgstr "输入10为基数："
+
+msgid "Input in Non-Negative Numbers:"
+msgstr "输入非负数："
+
+msgid "Calculation mode set to Sqrt"
+msgstr "计算模式设置为平方根"
+
+msgid "Result copied to clipboard"
+msgstr "结果已复制到剪贴板"
+
+#msgid "Failed to access clipboard"
+#msgstr "无法访问剪贴板"
+
+msgid "No result to copy"
+msgstr "没有结果可复制"
+
+msgid "Please select a calculation mode first"
+msgstr "请先选择计算模式"
+
+msgid "Logarithm is only defined for positive numbers"
+msgstr "对数仅对正数定义"
+
+msgid "Square root is only defined for non-negative numbers"
+msgstr "平方根仅对非负数定义"
+
+msgid ""
+"High Precision = {result}\n"
+"Rounded = {rounded_result}"
+msgstr ""
+"高精度 = {result}\n"
+"四舍五入 = {rounded_result}"
+
+msgid "Invalid input. Please check your expression"
+msgstr "无效输入。请检查您的表达式"
+
+msgid "An error occurred: "
+msgstr "发生错误："
+
+#msgid "Invalid input, only numbers allowed"
+#msgstr "无效输入，仅允许数字"
+
+# help.py
+msgid "Calculation Mode Help"
+msgstr "计算模式帮助"
+
+msgid ""
+"Standard Mode:\n"
+"计算遵循标准数学运算符优先级规则（PEMDAS）。\n"
+"示例：3 + 5 * 2 = 13（先执行乘法）。\n"
+"\n"
+"Left to Right Mode:\n"
+"计算从左到右执行，不考虑运算符优先级。\n"
+"示例：3 + 5 * 2 = 16（计算按从左到右的顺序执行）。\n"
+"\n"
+"Scientific Mode:\n"
+"\n"
+"Sin and Cos:\n"
+"计算正弦和余弦的值。\n"
+"输入必须为度数。计算器将自动将值转换为弧度进行计算。\n"
+"\n"
+"Logarithms:\n"
+"提供两种类型的对数：\n"
+"- 自然对数（LN）：以自然底数（e）为底的对数。\n"
+"- 以10为底的对数：以10为底的对数。\n"
+"负数不被支持，因为对数仅对正数定义。\n"
+"\n"
+"Square Root:\n"
+"计算一个数的平方根。\n"
+"负数不被支持，因为平方根仅对非负数定义。\n"
+"\n"
+"Result Format:\n"
+"- 高精度：显示结果的完整细节。\n"
+"- 四舍五入（2位小数）：以简化形式显示结果，四舍五入到2位小数，便于阅读。"
+msgstr ""
+
+msgid "OK"
+msgstr "确定"
